# prolix

./: .bth.toml  .geminiignore  .gitignore  .gitmodules  1crn_explicit_traj.array_record  1uao_explicit_settle_traj.npz  1uao_implicit_traj.array_record  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_ROADMAP.md  GEMINI.md  Justfile  LICENSE  NEXT_AGENT_PROMPT.md  PHASE1_COMPLETION_CHECKLIST.md  PHASE1_DELIVERABLES_SUMMARY.md  PHASE1_EXECUTION_GUIDE.md  PHASE1_INDEX.md  README.md  VALIDATION_PLAN_SUMMARY.md  WEEK_1_KICKOFF.md  benchmark_results.txt  chignolin_traj.array_record  debug_bonds.py  debug_init_momenta.py  debug_init_temperature.py  debug_noise_covariance.py  debug_parity_gaps.py  debug_projection_site_test.py  debug_proxide_params.py  debug_proxide_torsions.py  debug_temperature.py  diagnose_momentum_scaling.py  final_verification.sh  fit_bonded_batched_42.json  fix_imports_bulk.py  fix_positions.py  inspect_bonds.py  inspect_eqx.py  inspect_system_debug.py  (+38 more)
.agent/: .migrated  HANDOFF.md  PROXIDE_MIGRATION_PLAN.md  agent.db  agent.db.bak_migration_004  agent_tasks.jsonl  plans.jsonl  workspace.id
.agent/agents/: evolving-orchestrator.md
.agent/critiques/: 260421.md  260422.md  oracle_260422_prolix_jax_dtype.json  oracle_critique_260421.json
.agent/docs/: CLUSTER_CONFIG.md  EXECUTIVE_SUMMARY.md  NOSE_HOOVER_IMPLEMENTATION_STATUS.md  PHASE_2C_INVESTIGATION_REPORT.md  PRODUCTION_ROADMAP.md  RELEASE_DECISION_v1.0.md  RELEASE_NEXT_STEPS.md  RELEASE_SUMMARY.md  V1_0_RELEASE_APPROVED.md  V1_1_ROADMAP.md  v0.3.0_PHASE1_RISK_ASSESSMENT.md  v0.3.0_PHASE1_THEORY.md
.agent/recon/: 20260417.md  250124.json  250124.md  250125.md  250416.md  260415.md  260416.json  260416.md  260416_cycle49.md  260417.md  260417_cycle84.md  260515.md  260516_cycle51.md  explicit_solvent_validation_recon_260416.md
.agent/research/: agent_collaboration.md  agent_memory.md  cost_tracking.md  dispatch_maintenance_feature.md  dispatch_retry.md  gemini-cli-headless.md  maintenance_prompt_library.md  prompt_versioning.md  refresh_context_feature.md  rmcp_multi_module_tools.md  rmcp_multi_module_tools_report.md
.agent/roles/: oracle.md
.agent/schemas/: oracle_critique.json
.agent/templates/: DEVELOPMENT_MATRIX.md  NOTES.md  ROADMAP.md  TECHNICAL_DEBT.md  subdir_readme.md
.agent/workflows/: conversation_summary.md  document-directory.md  oracle-critique.md  orchestrator.md
.agents/: HANDOFF.md  HYDROGEN_ADDITION_DEBUG.md  NEIGHBOR_LIST_MD_INTEGRATION.md  PARITY_TESTING_ROADMAP.md  README.md  TECHNICAL_DEBT.md
.agents/archive/: PROXIDE_MIGRATION_HANDOFF.md
.bth/claims/: xr-parity-omm-water.claim.toml
.claude/: settings.json
.claude/workflows/: 36.js  37.js  38.js  39.js
.copilot/: instructions.md
.cursor/rules/: jax-idiomaticity.mdc
.gemini/: settings.json
.github/workflows/: ci.yml  openmm-nightly.yml  publish.yml
.praxia/: README.md  audits.jsonl  backlog.jsonl  daily.jsonl  debt.jsonl  harness_trace.jsonl  ideas.jsonl  identity.json  loop_priorities.md  loop_priorities.toml  loop_state.toml  mission.md  nlm.jsonl  phase0_spike_report.json  plans.jsonl  praxia.just  recon.jsonl  trace_segments.jsonl  trace_summaries.jsonl  trace_summaries_full.jsonl  vsm_state.json
.praxia/docs/: 2026-05-20-hp4-research-synthesis.md  INDEX.md  migration-manifest.txt  npt_ke_bug_diagnosis.md  v1.1_next_steps.md
.praxia/handoff/: 2026-04-30_kups_decouple_cluster_smoke.md
.praxia/handoffs/: prolix_Certify_20260604_132346_aa593e4e-1eba-4e12-ba3a-a07c7fd3a7ec.yaml  (+23 more)
.praxia/markdown/: INDEX.md
benchmarks/: benchmark_batched.py  benchmark_colab_nb.ipynb  benchmark_conformation.py  benchmark_ensembles.py  benchmark_noise.py  benchmark_openmm_conformation.py  benchmark_openmm_no_constraints.py  benchmark_scaling.py  compare_jax_openmm_validity.py  stress_test_stability.py  verify_batch_physics.py  verify_end_to_end_physics.py  verify_force_field_integration.py  verify_gaff_end_to_end.py  verify_ligand_support.py  verify_parameter_sensitivity.py  verify_pbc_end_to_end.py  verify_pt_end_to_end.py  verify_virtual_sites.py  visualize_benchmarks.py
docs/: .gitignore  BATCHING_GUIDE.md  EXPORT_GUIDE.md  INTEGRATOR_PARAMETER_MAPPING.md  Makefile  index.md
notebooks/: explicit_solvent_colab.ipynb  prolix_tutorial.ipynb
p2b_nvt_gate/: result_15341583.json  result_15347179.json
p5_nvt_gate_diag/: result_15446659.json
p5_nvt_gate_diag_b1/: result_15458955.json
p5_oracle/: result_15347194.json  result_15367629.json
scripts/: ablation_efa.py  analyze_chignolin.py  assess_force_fields.py  benchmark_efa_vs_pme.py  benchmark_gb_forces.py  benchmark_nlvsdense.py  benchmark_sprint6.py  benchmark_vs_openmm.py  build_browser_smoke_demo.py  check_py2dmol.py  check_py3dmol.py  compare_minimizers.py  convert_all_xmls.py  convert_water_box.py  debug_bonds.py  debug_born_radii.py  debug_openmm_parity.py  debug_radii_parsing.py  debug_torsion_matching.py  debug_torsion_mismatch.py  diagnose_fire_nan.py  diagnose_min_convergence.py  diagnose_simulation.py  export_regression_pme.py  extract_omm_radii.py  extract_walltime.sh  fetch_pdb_example.sh  generate_browser_viz.py  generate_ff.py  inspect_openmm_nonzero_torsions.py  inspect_openmm_torsions.py  integration_test.sh  phase1_diagnostic_runner.py  phase1_plotting_and_verdict.py  phase_2_2_0_gate.sh  profile_b1_pme_grid_sweep.py  profile_b1_step_scaling.py  profile_b1_water_trace.py  profile_jit.py  profile_run_simulation.py  (+23 more)
tests/: reproduce_gb_nan.py  reproduce_pme_error.py  test_analytical_forces.py  test_bundle_from_pdb.py  test_cell_list.py  test_chunked_gb_benchmark.py  test_circular_imports.py  test_export.py  test_export_roundtrip.py  test_fused_gb_alignment.py  test_fused_parity.py  test_gpu_profile_components.py  test_hmr.py  test_injected_charges_energy.py  test_neighbor_list_energy.py  test_nl_dense_parity.py  test_pme.py  test_sweep_1_5.py  test_system_parity.py  test_viewer_mock.py  test_visualization.py  test_zz_sweep_1_5.py
viewer/: index.html  package-lock.json  package.json  rspack.config.ts
workspace/: .gitignore  README.md  pyproject.toml
(+991 files in other folders)
