[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prolix"
version = "0.1.0"
description = "Protein Physics and Molecular Dynamics in JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jax-md",
    "equinox",
    "proxide",
    "oxidize",
    "biotite",
    "mdtraj",
    "numpy",
    "scipy",
    "chex",
    "jaxtyping",
    "py2Dmol>=1.5.1",
    "matplotlib>=3.10.7",
    "imageio>=2.37.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
cuda = ["jax[cuda12]"]
tpu = ["jax[tpu]"]
cpu = ["jax"]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ty",
    "openmm>=8.4.0",
    # "openff-toolkit>=0.14.0",  # TODO: Requires conda or special channel
]

docs = [
    "sphinx",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinxext-rediraffe",
]

viz = [
    "py2Dmol>=1.5.0",
    "flask>=3.0.0",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests (fast and critical)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
force-exclude = true
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "*.ipynb",
    "tests",
    "scripts",
    "inspect_eqx.py",
    "main.py",
    "test_bonded.py",
    "proxide",
    "benchmarks",
    "docs",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "D", "SIM", "PERF", "A", "TRY", "EM",
    "FBT", "S104", "BLE", "SLF001", "PGH003",
    "N803", "N806", "ARG001", "ERA001", "PLC0415",
    "G004", "PTH",
    "C901", "PLR0915", "PLR0912", "PLR2004",
    "FIX002", "TD002", "TD003",
    "E501", "E741", "E701",
    "PD", "COM812", "ISC001", "ARG003",
    "F722", # jaxtyping strings
    "RUF002", # greek sigma in docstrings
    "RET504", # unnecessary assignment before return
    "F841", # unused variables
    "RUF059", # unused unpacked variables
    "F821", # undefined name (often jaxtyping dims)
    "RUF022", # sorting __all__
    "TC002", # move jaxtyping into type-checking block
    "W293", # blank line whitespace
    "C414", # unnecessary list() in sorted()
]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "T201",    # print allowed in tests
    "ANN201",  # return type not required
    "INP001",  # implicit namespace package
    "PLC0415", # import outside top-level
    "SLF001",  # private member access
    "PLR2004", # magic value comparison
    "ANN001",  # missing type annotation
    "D100", "D101", "D102", "D103",  # missing docstrings
]
"scripts/**/*.py" = [
    "T201",    # print allowed in scripts
    "INP001",  # implicit namespace package
]

[tool.ty.src]
exclude = ["**/viewer.py"]

[tool.ty.environment]
root = ["src/prolix"]

[tool.ty.rules]
invalid-type-form = "ignore"



[dependency-groups]
dev = [
    "openmm>=8.4.0.post2",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
